# axum-api.template

./: .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  compose.yaml  config.alloy
.cargo/: config.toml
config/: settings.development.toml  settings.local.toml  settings.production.toml  settings.staging.toml  settings.toml
crates/dev-client/: Cargo.toml
crates/dev-client/src/: main.rs
src/: main.rs  settings.rs  test_utils.rs  web.rs
src/web/response/: hello_response.rs  mod.rs
src/web/routes/: hello_routes.rs
src/web/service/: hello_service.rs  mod.rs
src/web/state/: hello_state.rs  mod.rs
